[package]
name = "wireguard-keys"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.124", optional = true }
base64 = "0.13.0"
rand_core = "0.6.2"
x25519-dalek-fiat = "0.1.0"
thiserror = "1.0.24"
base32 = "0.4.0"
hex = "0.4.3"
rocket = { version = "0.5.0-rc.1", optional = true }

[features]
default = ["with-serde"]
with-serde = ["serde/derive"]
with-rocket = ["rocket"]
