[package]
name = "wireguard-keys"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.124", optional = true }
base64 = { version = "0.13.0", optional = true }
rand_core = "0.6.2"
x25519-dalek-fiat = "0.1.0"
thiserror = "1.0.24"
base32 = { version = "0.4.0", optional = true }
hex = { version = "0.4.3", optional = true }
rocket = { version = "0.5.0-rc.1", optional = true }
schemars = { git = "https://github.com/xfbs/schemars", optional = true, version = "0.8.8" }
paste = "1.0.6"
zeroize = "1.4.3"

[features]
default = ["serde", "hex", "base64"]
schema = ["schemars"]

[dev-dependencies]
serde_test = "1"
