[package]
name = "wireguard-keys"
version = "0.1.0"
edition = "2021"
description = "Generate, parse and export WireGuard (ed25519) keys."
license = "AGPL-3.0-only"
authors = ["Patrick Elsen <patrick@ether.ai>"]
repository = "https://gitlab.com/fractalnetworks/wireguard-keys"

[dependencies]
serde = { version = "1.0.0", optional = true }
base64 = { version = "0.13.0", optional = true }
rand_core = "0.6.0"
x25519-dalek-fiat = "0.1.0"
thiserror = "1.0.0"
base32 = { version = "0.4.0", optional = true }
hex = { version = "0.4.0", optional = true }
rocket = { version = "0.5.0-rc.1", optional = true }
schemars = { git = "https://github.com/xfbs/schemars", optional = true, version = "0.8.0" }
paste = "1.0.0"
zeroize = "1.5.0"

[features]
default = ["serde", "hex", "base64"]
schema = ["schemars"]

[dev-dependencies]
serde_test = "1.0.136"
